<resources>
    <!--Charlotte-->
    <string name="app_name">Project One</string>
    <string name="m_e_n_t_a_l_h_e_a_l_t_h">m e n t a l h e a l t h</string>
    <string name="oneTwoSleepQuestion">1-2 hours per night</string>
    <string name="mentalHealth">mental health</string>
    <string name="sleepQuestion">how much have you slept this week (approx.)</string>
    <string name="threeFourSleepQuestion">3-4 hours per night</string>
    <string name="fiveSixSleepQuestion">5-6 hours per night</string>
    <string name="sevenPlusSleepQuestion">7+ hours per night</string>
    <string name="okayQuestion">would you consider yourself okay?</string>
    <string name="yesOkay">yes</string>
    <string name="noOkay">no</string>
    <string name="illnessQuestion">what mental health illnesses do you have?</string>
    <string name="anxietyIllness">anxiety</string>
    <string name="depressionIllness">depression</string>
    <string name="ocdIllness">ocd</string>
    <string name="bipolarIllness">bipolar</string>
    <string name="adhdIllness">adhd</string>
    <string name="ptsdIllness">ptsd</string>
    <string name="notSureYetIllness">not entirely sure but ive got something going on</string>
    <string name="otherIllness">other</string>
    <string name="supportSystem">do you have a support system?</string>
    <string name="yesSupport">yes</string>
    <string name="noSupport">no</string>
    <string name="tryingSupport">im working on it</string>
    <string name="complicatedSupport">its complicated...</string>
    <string name="petSupport">i have pets</string>
    <string name="tylerSupport">i have a tyler</string>
    <string name="elijahSupport">i have an elijah</string>
    <string name="saveButton">save</string>
<<<<<<< Updated upstream
<!--william-->
=======
    
>>>>>>> Stashed changes
    <string name="sleepSurvey">Sleep Survery</string>
    <string name="sleepHoursQuestion">How many hours have you slept today?</string>
    <string name="hoursSleptNotSlept">I have not slept today</string>
    <string name="hoursSleptOneToThree">1–3</string>
    <string name="hoursSleptFourToSeven">4–7</string>
    <string name="hoursSleptEightToEleven">8–11</string>
    <string name="hoursSleptTwelvePlus">12+</string>
    <string name="questionBedTime">What time did you go to bed?</string>
    <string name="questionSleepComfort">Was your sleep comfortable?</string>
    <string name="sleepComfortYes">Yes</string>
    <string name="sleepComfortNo">No</string>
    <string name="questionEnergyWake">Do you feel energized after waking up?</string>
    <string name="EnergyWakeYes">Yes</string>
    <string name="EnergyWakeMeh">Meh</string>
    <string name="EnergyWakeNo">No</string>
    <string name="questionMattress">Do you like the mattress you sleep on?</string>
    <string name="MattressYes">Yes</string>
    <string name="MattressNo">No</string>
    <string name="questionShareRoom">Do you share a room with somebody?</string>
    <string name="shareRoomYes">Yes</string>
    <string name="shareRoomNo">No</string>
    <string name="questionDream">Do you have dreams while sleeping?</string>
    <string name="dreamYes">Yes</string>
    <string name="dreamNo">No</string>
    <string name="questionWakeyFeely">how did you feel when you woke up today?</string>
    <string name="wakeyFeelySad">sad</string>
    <string name="wakeyFeelyHappy">happy</string>
    <string name="wakeyFeelyMad">mad</string>
    <string name="wakeyFeelyTired">tired</string>
<!--Fatima-->
    <string name="eatNo">No</string>
    <string name="eatYes">Yes</string>
    <string name="mealTwo">2 meals</string>
    <string name="mealThree">3 meals</string>
    <string name="mealOne">1 meal</string>
    <string name="mealBlue">Blue meal</string>
    <string name="mealMore">More meals</string>
    <string name="drinkNo">No</string>
    <string name="drinkYes">Yes</string>
    <string name="meatBeef">Beef</string>
    <string name="meatSeafood">Seafood</string>
    <string name="meatChicken">Chicken</string>
    <string name="meatPork">Pork</string>
    <string name="eatTodayQuestion">Did you eat today?</string>
    <string name="foodGoodQuestion">If yes was your food good?</string>
    <string name="mealsTodayQuestion">How many meals today?</string>
    <string name="waterTodayQuestion">Did you drink water today?</string>
    <string name="meatTypeQuestion">What type of meat did you eat?</string>
    <string name="foodNo">No</string>
    <string name="foodMaybe">Not yet...</string>
    <string name="foodYes">Yes</string>
    <string name="lifeQuestion">hows life going so far?</string>
    <string name="lifeAnswer">i.e. very not gucci</string>
    <string name="favoriteMealAnswer">favorite meal</string>
    <string name="favoriteMealQuestion">What was your favorite meal today?</string>
    <string name="answerBedTime">answerBedTime</string>
</resources>